https://luceeserver.atlassian.net/browse/LDEV-2075 https://luceeserver.atlassian.net/browse/LDEV-2076